# simple-code-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  agent.py  app.py  pyproject.toml
tools/: code_execution.py  code_execution_tool.py
